[package]
name = "waspc"
version = "0.1.0"
authors = ["Richard Anaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstring = "0.0"
wasp-core = "0"
failure = "0.1.5"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
opt-level = 's'