[package]
name = "watc"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "A watc compiler in WebAssembly for wasm-script"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std", "compiler"]
repository = "https://github.com/richardanaya/wasm-script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-compiler = {path="../wasm-compiler",version="0"}
wat = "1.0.28"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
opt-level = 's'